--- a/plugins/a11y-text-wand/style.less
+++ b/plugins/a11y-text-wand/style.less
@@ -10,6 +10,14 @@
 
 .tota11y-style-list {
   list-style: none;
+
+  .priority-high {
+    background-color: rgba(110, 214, 37, 0.47);
+  }
+
+  .priority-med {
+    background-color: rgba(110, 214, 37, 0.27);
+  }
 }
 
 .tota11y-style-list-heading {
@@ -18,6 +26,8 @@
   font-size: 16px;
   text-transform: capitalize;
 }
+
+
 
 // .tota11y-style-list-heading:first-child {
 //   margin-top: 0;
