--- a/plugins/crowdsourcer/style.less
+++ b/plugins/crowdsourcer/style.less
@@ -19,6 +19,27 @@
   text-transform: capitalize;
 }
 
-// .tota11y-style-list-heading:first-child {
-//   margin-top: 0;
-// }
+.tota11y-outlined {
+
+    &-0 {
+        outline: 2px solid fadein(@highlightColor0, 100%);
+    }
+    &-1 {
+        outline: 2px solid fadein(@highlightColor1, 100%);
+    }
+    &-2 {
+        outline: 2px solid fadein(@highlightColor2, 100%);
+    }
+    &-3 {
+        background-color: @highlightColor3;
+    }
+    &-4 {
+        background-color: @highlightColor4;
+    }
+    &-5 {
+        background-color: @highlightColor5;
+    }
+    &-6 {
+        background-color: @highlightColor6;
+    }
+}
